--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 	<meta charset="utf-8">
 	<title>Week 1 - Excercise</title>
 	<meta name="viewport" content="width=device-width,initial-scale=1">
-    <link href="css/general.css" rel="stylesheet">
+    <link href="css/main.css" rel="stylesheet">
 </head>
 <body>
     
-    <div>
+    <div class="wrapper">
         <header>
             <h1>Beetroot (<em>Beta vulgaris</em>)</h1>
             <figure>
